# md-zh-translator

./: .env.example  .gitignore  README.md  check_update.bat  check_update.py  check_update.sh  md_zh_translator.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: formula_test.md  formula_test.zh.md  sample_zh.md  sample_zh_dry.md
scripts/: RELEASE_USAGE_zh.md  build_release.py  build_release_assets.py  build_windows_release.ps1  pyinstaller_entry.py
src/md_translate_zh/: __init__.py  cleaner.py  cli.py  client.py  config.py  markdown_processor.py  rate_limiter.py  translator.py
tests/: test_translator_recovery.py
